--- a/beerquestService/beerquestService.csproj
+++ b/beerquestService/beerquestService.csproj
@@ -59,7 +59,7 @@
     </VisualStudio>
   </ProjectExtensions>
   <ItemGroup>
-      <Reference Include="Microsoft.Owin.Host.SystemWeb">
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
       <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.2.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Mobile.Service">
@@ -186,6 +186,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
+    <Compile Include="DataObjects\BeerQuestItems.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
     <Compile Include="Models\beerquestContext.cs" />
     <Compile Include="ScheduledJobs\SampleJob.cs" />
